--- a/allifmaalcommonapp/templates/allifmaalcommonapp/tasks/tasks.html
+++ b/allifmaalcommonapp/templates/allifmaalcommonapp/tasks/tasks.html
@@ -107,7 +107,7 @@
       
       {% for item in allifqueryset %} 
       <tr data-id="{{item.id}}">
-      <td class="allif-fix-table-col"><a class="allif-table-links" href="{% url 'allifmaalcommonapp:commonAddSeeTaskDetails' item.id user_var glblslug %}">{{item.task}}</a></td>
+      <td class="allif-fix-table-col"><a class="allif-table-links" href="">{{item.task}}</a></td>
      
       
       <td>{{item.starts|date:'d/m/Y'}}</td>
