--- a/allifmaalcommonapp/templates/allifmaalcommonapp/transport/shipment_pdf.html
+++ b/allifmaalcommonapp/templates/allifmaalcommonapp/transport/shipment_pdf.html
@@ -43,7 +43,7 @@
 
     </table>
     </div>
-    <!--end of ... Table header section-->
+    <!--end of ... Table header section...-->
     <div class="allif-pdf-table-content-body-header">
     <span class="allif-pdf-table-content-headers">Subject: </span> {{allifquery.description}}
     
