--- a/allifmaalcommonapp/templates/allifmaalcommonapp/ui/forms/add-form.html
+++ b/allifmaalcommonapp/templates/allifmaalcommonapp/ui/forms/add-form.html
@@ -308,6 +308,9 @@
        {% endif %}
 
        {% endblock %}
+       
+       {% block item_details_related_items_full_table %}
+       {%endblock%}
       </div>
       <!--END.... END of single pages content and its links section-->
     </div>
