--- a/allifmaalcommonapp/templates/allifmaalcommonapp/records/progress/progress.html
+++ b/allifmaalcommonapp/templates/allifmaalcommonapp/records/progress/progress.html
@@ -1,114 +1,44 @@
-{% extends 'allifmaalcommonapp/base/uimainbase/allifmaaluibase.html'%}
-{% load humanize %}
-{% block title %}
-{{title}}
-{% endblock %}
-{% block style %}
-{%endblock%}
-{% block body %}
-<div class="allifmaal-main-container">
-<!--start....main headere-->
-<div class="card-header">
-
-  <div class="row mt-12" ><!--start....header row-->
-  
-  <div class="col-md-12"><!--start....header column-->
-  
-  <div class="container-fluid amel-content-header">
-    
-    <a href="{% url 'allifmaalcommonapp:commonHome' user_var glblslug %}">Home</a>
-    <a href="{% url 'allifmaalcommonapp:commonTransactions' user_var glblslug %}">Transactions</a>
-    <a href="{% url 'allifmaalcommonapp:commonProgress' allifquery.id user_var glblslug %}">Progress Records</a>
-  
-   <a href="{% url 'allifmaalcommonapp:commonAddProgress' allifquery.id user_var glblslug %}">Add New Progress</a>
-  </div>
-  
-      </div><!--end....header column-->
-    
-    </div><!--end....header row-->
-  
-  </div><!--end....main headere-->
-
-<div class="allifmaincontainer">  
-<div class="row mt-12"> <!--start....table row-->
- <div class="table-details-content-description">Progress Records for {{allifquery}} </div>
-  <div class="col-md-12"> <!--start....table column-->
-
-    <div class="allif-scroll-table">
-      <div class="table-responsive allif-full-table">
-      <table class="table table-layout">
-        <thead>
-          <tr class="allif-table-header-row">
-          <td class="allif-fix-table-col">Progress Description</td>
-        <td>Recorded By</td>
-          <td>Recorded On</td>
-          <td>Date</td>
-       
-          <td>Navigate</td>
-          
-          <td> . . . </td>
-          <td></td>
-          </tr>
-          </thead>
-          <tbody class="allif-table-body">
-           
-          
-          {% for item in allifqueryset %} 
-          <tr data-id="{{item.id}}">
-          <td class="allif-fix-table-col"><a class="allif-table-links" href="{% url 'allifmaalcommonapp:commonProgressDetails' item.id user_var glblslug %}">{{item.description}}</a></td>
-          <td>
-            {{item.owner}}
-           </td>
-            <td>
-            {{item.recorded_on|date:'d/m/Y'}}
-           </td>
-          
-           <td>
-            {{item.date|date:'d/m/Y'}}
-           </td>
-          
-           <td>
-            <div class="dropdown allifmaal-content-dropdown">
-              <a href="#" onclick="showDropdown(event, this)" class="dropdown-toggle dropdown-item" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">Options</a>
-              <div class="dropdown-content">
-                <a href="{% url 'allifmaalcommonapp:commonEditProgress' item.id user_var glblslug %}" class="dropdown-item" id="allif-table-drop-item-link">Edit Item</a>
-                <a href="#" onclick="confirmDelete(this)" class="dropdown-item" id="allif-table-drop-item-link-delete">Delete Item</a>
-                
-              </div>
-            </div>
-            <div class="dropdown allif-confirm-action">
-              
-              <a href="{% url 'allifmaalcommonapp:commonProgress' item.trans_number.id user_var glblslug %}" id="allif-table-drop-item-link">No</a><span><strong> | </strong></span>
-              <a href="{% url 'allifmaalcommonapp:commonDeleteProgress' item.id user_var glblslug %}" id="allif-confirm-delete">Confirm</a>
-            </div>
-  
-           
-          </td>
-         <td> . . . </td>
-         <td></td>
-        
-    
-      </tr>
-      {% endfor %}
-     
-        </tbody>
-      </table>
-      </div>
-     </div>
-
-     
-      </div><!--end....table column-->
-  </div>
-
-</div><!--end....table row-->
-
-<!--end of table-->
-
-</div><!--end of main container of the page....-->
-
-  {% block scripts %}
-  <!--when you put the js code here, it gives a repetitive results....-->
+  {% extends 'allifmaalcommonapp/ui/tables/full/data-list.html'%}
+  {% load humanize %}
+  {% load allif_navigation_tags %}
+  {% block allif-basic-search-action %}
+    {% url 'allifmaalcommonapp:commonProgressSearch' user_var glblslug %}
   {% endblock %}
+ 
+  {% block advanced-search-action %}
+    {% url 'allifmaalcommonapp:commonProgressAdvanceSearch' user_var glblslug %}
+  {% endblock %}
+  {% block upload-excel-file-action %}
   
-   {% endblock %}
+  {% endblock %}
+  {% block allif-header-links %}
+ <a href="{% allif_get_single_nav_link_url 'Transactions' user_var glblslug %}">Transactions</a>
+  {% endblock %}
+  {% block upload-excel-file %}
+  {%endblock%}
+  {% block list-table-headers %}
+  <td class="allif-fix-table-col">Name</td>
+   <td class="allif-table-header-td">Customer</td>
+  
+  <td class="allif-table-header-td">Status</td>
+  
+  <td class="allif-table-header-td">Date</td>
    
+  {% endblock %}
+
+    
+  {% block list-table-content-seciton %}
+  <td class="allif-fix-table-col">{% block list-table-content-seciton-links %}<a class="allif-table-links" href="{% url 'allifmaalcommonapp:commonProgressDetails' item.id user_var glblslug %}"> {{item.name}} </a>{%endblock%}</td>
+  
+  <td class="allif-table-content-td"> {{item.trans_number.customer}} </td>
+  <td class="allif-table-content-td">
+    <a class="allif-table-links" href="{% url 'allifmaalcommonapp:commonEditProgress' item.id user_var glblslug %}">
+     {{item.status}}</a>
+     </td>
+  <td class="allif-table-content-td"> {{item.date}} </td>
+  {% endblock %}
+  {% block list-table-content-seciton-dropdown-links %}
+  <a href="{% url 'allifmaalcommonapp:commonEditProgress' item.id user_var glblslug %}" class="dropdown-item" id="allif-table-drop-item-link">Edit Item</a>
+  
+  
+  {% endblock %}
