--- a/allifmaalcommonapp/templates/allifmaalcommonapp/transport/shipments/add_shipment_items.html
+++ b/allifmaalcommonapp/templates/allifmaalcommonapp/transport/shipments/add_shipment_items.html
@@ -1,287 +1,168 @@
-{% extends 'allifmaalcommonapp/base/uimainbase/allifmaaluibase.html'%}
-{% load humanize %}
-{% block title %}
-{{title}}
+{% extends 'allifmaalcommonapp/ui/forms/add-form.html'%}
+{% load allif_navigation_tags %}
+
+ {% block add-form-header-block %}
+
+<a href="{% allif_get_single_nav_link_url 'Transits' user_var glblslug %}">Transports</a>
+<a href="{{ allif_contextual_action_links.AddTransitDetails.url }}">Shipment Details</a>
+<a href="{{ allif_contextual_action_links.AddShipmentItems.url }}">Add Items</a>
+<a href="{{ allif_contextual_action_links.TransitPdf.url }}">Download Shipment</a>
+ 
 {% endblock %}
-{% block style %}
-{%endblock%}
-{% block body %}
-<div class="allifmaal-main-container">
-<!--start....main headere-->
-<div class="card-header">
-  <div class="row mt-12" ><!--start....header row-->
-  <div class="col-md-12"><!--start....header column-->
-  <div class="container-fluid amel-content-header">
 
-    <a href="{% url 'allifmaalcommonapp:commonHome' user_var glblslug %}">Home</a>
-    <a href="{% url 'allifmaalcommonapp:commonAddShipmentItems' allifquery.id user_var glblslug %}">Refresh</a>
-    <a href="{% url 'allifmaalcommonapp:commonAddTransitDetails' allifquery.id user_var glblslug %}">Shipment Details</a>
-    
-    <a href="{% url 'allifmaalcommonapp:commonTransits' user_var glblslug %}">Shipments</a>
-
-  <a href="{% url 'allifmaalcommonapp:commonTransitToPdf' allifquery.id user_var glblslug %}">Download</a>
-    
-  </div>
-  
-      </div><!--end....header column-->
-    
-    </div><!--end....header row-->
-  
-  </div><!--end....main headere-->
-
-<div class="allifmaincontainer">
-
-  <div class="row mt-12"> <!--start....table row-->
-      <div class="table-details-content-description">{{allifquery}} Shipment Items</div>
-    <div class="col-md-12"><!--start of the first row body-->
-      <div class="allif-form-container">
-      
-      <div class="row"><!--start of row div --->
-        <div class="allif-scroll-table">
-          <div class="table-responsive allif-full-table">
-          <table class="table table-layout">
-            <thead>
-              <tr class="allif-table-header-row">
-               
-                <td>Item Description</td>
-                <td>Details</td>
-                <td>Quantity</td>
-                <td>Measured In</td>
-                <td>Origin</td>
-                <td>Destination</td>
-              
-              <td>Navigate</td>
-              
-              <td> . . . </td>
-              <td></td>
-              </tr>
-              </thead>
-              <tbody class="allif-table-body">
-             
-              {% for item in allifqueryset %} 
-              <tr data-id="{{item.id}}">
-              <td><a class="allif-table-links" href="{% url 'allifmaalcommonapp:commonShipmentItemDetails' item.id user_var glblslug %}">{{item.items}}</a></td>
-              <td>{{item.details}}</td>
-              <td>{{item.quantity|floatformat:2|intcomma}}</td>
-              <td>{{item.unit_of_measure}}</td>
-              <td>{{item.origin}}</td>
-              <td>{{item.destination}}</td>
-         
-               <td>
-                <div class="dropdown allifmaal-content-dropdown">
-                  <a href="#" onclick="showDropdown(event, this)" class="dropdown-toggle dropdown-item" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">Options</a>
-                  <div class="dropdown-content">
-                    <a href="{% url 'allifmaalcommonapp:commonEditShipmentItem' item.id user_var glblslug %}" class="dropdown-item" id="allif-table-drop-item-link">Edit Item</a>
-                    <a href="#" onclick="confirmDelete(this)" class="dropdown-item" id="allif-table-drop-item-link-delete">Delete Item</a>
-                    
-                  </div>
-                </div>
-                <div class="dropdown allif-confirm-action">
-                  
-                  <a href="{% url 'allifmaalcommonapp:commonAddShipmentItems' item.shipment.id user_var glblslug %}" id="allif-table-drop-item-link">No</a><span><strong> | </strong></span>
-                  <a href="{% url 'allifmaalcommonapp:commonDeleteShipmentItem' item.id user_var glblslug %}" id="allif-confirm-delete">Confirm</a>
-                </div>
-      
-               
-              </td>
-             <td> . . . </td>
-             <td></td>
-            
-        
-          </tr>
-          {% endfor %}
-
-         
-            </tbody>
-          </table>
-          </div>
-         </div>
-
-        
-                   
-      <!--end of table-->
-          
-            </div><!--end of column 1-->
-        
-        </div><!--end of row div --->
-            
-        </div>
-            </div><!--end of first row body....-->
-
-
-<div class="row mt-12"> <!--start....table row-->
-  <div class="table-details-content-description">Add/Edit {{allifquery}} Shipment Details</div>
-  <form method='POST' action=''>{% csrf_token %}
-  <div class="col-md-12"> <!--start....table column-->
-  <div class="allif-scroll-table">
-    <div class="allif-info-tables">
-      <div class="row"><!--start of row div --->
-  <!--start of column two-->
-  <div class="col-md-4">
-    
-      <!--start of the table here-->
-      <div class="table-responsive">
-      <table class="table table-layout">
-      <tbody>
-
-             <tr>
-            <td class="allif-fix-table-col">Consigner</td>
-            <td>{{form.consigner}}</td>
-        
-            </tr>
-             <tr>
-            <td class="allif-fix-table-col">Consignee</td>
-            <td>{{form.consignee}}</td>
-        
-            </tr>
-            
-          <tr>
-            <td class="allif-fix-table-col">Items</td>
-            <td>{{form.items}}</td>
-            </tr>
-              <tr>
-            <td class="allif-fix-table-col">Quantity</td>
-            <td>{{form.quantity}}</td>
-            </tr>
-             
-             <tr>
-            <td class="allif-fix-table-col">Details</td>
-            <td>{{form.details}}</td>
-        
-            </tr>
-          
-             <tr>
-            <td class="allif-fix-table-col">Item Value</td>
-            <td>{{form.value}}</td>
-        
-            </tr>
-             <tr>
-            <td class="allif-fix-table-col">Chargeable Rate</td>
-            <td>{{form.rate}}</td>
-        
-            </tr>
-             <tr>
-              <td class="allif-fix-table-col">Origin</td>
-              <td>{{form.origin}}</td>
-              </tr>
-            <tr>
-              <td class="allif-fix-table-col">Destination</td>
-              <td>{{form.destination}}</td>
-              
-             </tr>
-          
-        </tbody>
-        </table>
-      </div>
-        </div>
-           
-    
-     <!--start of column two-->
-     <div class="col-md-4">
-       <!--start of the table here-->
-       <div class="allif-details-card table-responsive">
-       <table class="table table-layout">
-        <tbody>
-       <tr>
-            <td class="allif-fix-table-col">Weight</td>
-            <td>{{form.weight}}</td>
-        
-            </tr>
-             <tr>
-            <td class="allif-fix-table-col">Length</td>
-            <td>{{form.length}}</td>
-        
-            </tr>
-             <tr>
-            <td class="allif-fix-table-col">Width</td>
-            <td>{{form.width}}</td>
-        
-            </tr>
-             <tr>
-            <td class="allif-fix-table-col">Height</td>
-            <td>{{form.height}}</td>
-        
-            </tr>
-           
-             
-               <tr>
-                <td class="allif-fix-table-col">Status</td>
-                <td>{{form.status}}</td>
-                </tr>
-              
-                 <tr>
-                <td class="allif-fix-table-col">Dispatched By</td>
-                <td>{{form.dispatched_by}}</td>
-                </tr>
-               <tr>
-            <td class="allif-fix-table-col">Measured In</td>
-            <td>{{form.unit_of_measure}}</td>
-            </tr>
-         
-          </tbody>
-          </table>
-          </div>
-          </div>
-    
-    
-     <!--start of column two-->
-     <div class="col-md-4">
-      <div class="allif-details-card table-responsive">
-       <!--start of the table here-->
-       <table class="table table-layout">
-        <tbody>
-         
-           <tr>
-            <td class="allif-fix-table-col">Received On</td>
-            <td>{{form.received}}</td>
-        
-            </tr>
-            <tr>
-          <td class="allif-fix-table-col">Expected</td>
-          <td>{{form.expected}}</td>
-          </tr>
-              <tr>
-                <td class="allif-fix-table-col">Expires</td>
-                <td>{{form.expires}}</td>
-                </tr>
-
-          <tr>
-          <td class="allif-fix-table-col">Delivered On</td>
-          <td>{{form.delivered_on}}</td>
-          </tr>
-
-        <tr>
-        <td class="allif-fix-table-col">Comments</td>
-        <td>{{form.comments}}</td>
-        </tr>
-
-        <tr>
-          <td class="allif-fix-table-col">Action</td>
-          <td> <input type="submit" value='Save' class="btn btn-success allifmaal-submit-btn"></td>
-      
-          </tr>
-          </tbody>
-          </table>
-  </div>
-    </div>
-    </div><!--end of row div --->
-      
-        </div>
-
-</div><!--end....table row-->
-</div>
-</form>
-<!--end of table-->
-
-</div><!--end of main container of the page....-->
-
-<hr>
-
-  
-</div><!--end of main container of the page-->
-</div>
-  {% block scripts %}
-
-  {% endblock %}
-   {% endblock %}
+   {% block core-tab-col-one %}
    
+     <tr>
+      <td class="allif-fix-table-col-forms">Consigner</td>
+      <td>{{form.consigner}}</td>
+    </tr>
+
+    <tr>
+      <td class="allif-fix-table-col-forms">Name</td>
+      <td>{{form.name}}</td>
+    </tr>
+    
+     <tr>
+      <td class="allif-fix-table-col-forms">Origin</td>
+      <td>{{form.origin}}</td>
+    </tr>
+     <tr>
+      <td class="allif-fix-table-col-forms">Destination</td>
+      <td>{{form.destination}}</td>
+    </tr>
+
+    {%endblock%}
+
+    {% block core-tab-col-two %}
+    
+     <tr>
+      <td class="allif-fix-table-col-forms">Consignee</td>
+      <td>{{form.consignee}}</td>
+    </tr>
+     <tr>
+      <td class="allif-fix-table-col-forms">Items</td>
+      <td>{{form.items}}</td>
+    </tr>
+     <tr>
+        <td class="allif-fix-table-col-forms">Description</td>
+        <td>{{form.description}}</td>
+      </tr>
+     <tr>
+      <td class="allif-fix-table-col-forms">Value</td>
+      <td>{{form.value}}</td>
+    </tr>
+    
+    
+    {%endblock%}
+
+     {% block standard-tab-col-one %}
+    <tr>
+      <td class="allif-fix-table-col-forms">Charge Rate</td>
+      <td>{{form.rate}}</td>
+    </tr>
+     
+     <tr>
+      <td class="allif-fix-table-col-forms">Units</td>
+      <td>{{form.unit_of_measure}}</td>
+    </tr>
+    <tr>
+      <td class="allif-fix-table-col-forms">Expires</td>
+      <td>{{form.expires}}</td>
+    </tr>
+   
+     <tr>
+      <td class="allif-fix-table-col-forms">Expected On</td>
+      <td>{{form.expected}}</td>
+    </tr>
+    
+     <tr>
+      <td class="allif-fix-table-col-forms">Dispatched By</td>
+      <td>{{form.dispatched_by}}</td>
+    </tr>
+    
+    
+    {%endblock%}
+       
+   {% block standard-tab-col-two %}
+   
+     <tr>
+      <td class="allif-fix-table-col-forms">Weight</td>
+      <td>{{form.weight}}</td>
+    </tr>
+     <tr>
+      <td class="allif-fix-table-col-forms">Length</td>
+      <td>{{form.length}}</td>
+    </tr>
+     <tr>
+      <td class="allif-fix-table-col-forms">Width</td>
+      <td>{{form.width}}</td>
+    </tr>
+     <tr>
+      <td class="allif-fix-table-col-forms">Height</td>
+      <td>{{form.height}}</td>
+    </tr>
+     <tr>
+      <td class="allif-fix-table-col-forms">Item Status</td>
+      <td>{{form.shipment_status}}</td>
+    </tr>
+    
+    
+    {%endblock%}
+
+
+  {% block allif_sensitive_section_col_one %}
+    <tr>
+      <td class="allif-fix-table-col"> {{allifquery}}</td>
+      <td><a class="amel-table-list-identifier" href="{% allif_get_single_nav_link_url 'Transits' user_var glblslug %}">Go Back</a></td>
+    </tr>
+  {% endblock %}
+  {% block allif_sensitive_section_col_two %}
+    <tr>
+      <td class="allif-fix-table-col">Delet {{allifquery}}</td>
+      <td><a class="amel-table-list-identifier body-delete-link" href="{{ allif_contextual_action_links.DeleteTransitConfirm.url }}">Delete {{allifquery}}</a></td>
+    </tr>
+    
+    {% endblock %}
+
+    
+{% block item_details_related_items_full_table %}
+  <div class="allif-full-table-content-main-wrapper">
+      {% include 'allifmaalcommonapp/includes/tables/full-table-header-upper-section.html' %}
+
+      {% block list-table-headers %}
+        <td class="allif-fix-table-col"> Item</td>
+        <td class="allif-fix-table-col"> Quantity</td>
+        <td class="allif-table-header-td"> Origin</td>
+        <td class="allif-table-header-td"> Destination </td>
+        <td class="allif-table-header-td"> Status</td>
+         {% endblock %}
+        <td class="allif-table-header-td">Navigate</td>
+      {% include 'allifmaalcommonapp/includes/tables/full-table-header-lower-section.html' %}
+      
+      {% for item in allifqueryset %}  
+        <tr data-id="{{item.id}}" class="allif-table-header-content-row">
+        {% block list-table-content-seciton %}
+        <td class="allif-fix-table-col">{% block list-table-content-seciton-links %}
+          <a class="allif-table-links" href="{% url 'allifmaalcommonapp:commonShipmentItemDetails' item.id user_var glblslug %}"> {{item.items}} </a>{%endblock%}</td>
+        <td class="allif-table-content-td"> {{item.quantity}} </td>
+        <td class="allif-table-content-td"> {{item.origin}}</td>
+         <td class="allif-table-content-td"> {{item.destination}}</td>
+        <td class="allif-table-content-td"> <a class="allif-table-links" href="{% url 'allifmaalcommonapp:commonEditShipmentItem' item.id user_var glblslug %}">{{item.shipment_status}} </a></td>
+        {% endblock %}
+        <td class="allif-table-content-td">
+           
+        {% include 'allifmaalcommonapp/includes/tables/full-table-dropdown-upper-section.html' %}
+
+        {% block list-table-content-seciton-dropdown-links %}
+        <a href="" class="dropdown-item" id="allif-table-drop-item-link">Item Details</a>
+        {% endblock %}
+
+        {% include 'allifmaalcommonapp/includes/tables/full-table-lower-section.html' %}
+        </td>
+    </tr>
+      {% endfor %}
+    {% include 'allifmaalcommonapp/includes/tables/full-table-last-section.html' %}
+
+      </div>
+{%endblock%}
+
