--- a/allifmaalshaafiapp/templates/allifmaalshaafiapp/triage/triage_data_details.html
+++ b/allifmaalshaafiapp/templates/allifmaalshaafiapp/triage/triage_data_details.html
@@ -1,483 +1,133 @@
-{% extends 'allifmaalshaafiapp/base/uimainbase/shaafibase.html'%}
-{% load humanize %}
-{% block title %}
-{{title}}
-{% endblock %}
-{% block style %}
-{%endblock%}
-{% block body %}
+  {% extends 'allifmaalcommonapp/ui/details/item-details.html'%}
+  {% load humanize %}
+  {% load allif_navigation_tags %}
+  {% block add-form-header-block %}
+<a href="{% allif_get_single_nav_link_url 'triagedata' user_var glblslug %}">Triage</a>
+<a href="{{ allif_contextual_action_links.EditTriageData.url }}">Edit Triage Details</a>
+  {%endblock%}
 
-<!-- START... below is for loading contextual dynamic tags and links... used for only contextual links -->
-{% load allif_contextual_action_tags %} {# this helps to put the links where you want and it loads them #}
-{% allif_get_contextual_actions_map allifquery user_var glblslug as allif_contextual_action_links %}
-<!--'allif_contextual_action_links' now holds the dictionary returned by the tag-->
-<!-- END.. -->
-<div class="allifmaal-main-container">
+  {% block details-table-col-one %}
+  <tr>
+    <td class="allif-fix-table-col">Staff in Charge</td>
+    <td>{{allifquery.medical_file.employee_in_charge}}</td>
+  </tr>
 
+   <tr>
+    <td class="allif-fix-table-col">Medical File</td>
+    <td>{{allifquery.medical_file}}</td>
+  </tr>
+   <tr>
+    <td class="allif-fix-table-col">Complaints</td>
+    <td>{{allifquery.complaints}}</td>
+  </tr>
 
-<!--start....main headere-->
-<div class="card-header">
+  {%endblock%}
 
-<div class="row mt-12" ><!--start....header row-->
+  {% block details-table-col-two %}
+  <tr>
+    <td class="allif-fix-table-col">Weight</td>
+    <td>{{allifquery.weight}}</td>
+  </tr>
+   <tr>
+    <td class="allif-fix-table-col">Height</td>
+    <td>{{allifquery.height}}</td>
+  </tr>
+   <tr>
+    <td class="allif-fix-table-col">Systolic</td>
+    <td>{{allifquery.blood_pressure_systolic}}</td>
+  </tr>
+   <tr>
+    <td class="allif-fix-table-col">Diastolic</td>
+    <td>{{allifquery.blood_pressure_diastolic}}</td>
+  </tr>
+   
+  {% endblock %}
+  
+  {% block core-details-tab-col-one %}
+  <tr>
+    <td class="allif-fix-table-col">O2 Saturation</td>
+    <td>{{allifquery.oxygen_saturation}}</td>
+  </tr>
+   <tr>
+    <td class="allif-fix-table-col">History</td>
+    <td>{{allifquery.past_medical_history}}</td>
+  </tr>
+   <tr>
+    <td class="allif-fix-table-col">Respiration Rate</td>
+    <td>{{allifquery.respiration_rate}}</td>
+  </tr>
+   <tr>
+    <td class="allif-fix-table-col">Chronics</td>
+    <td>{{allifquery.known_chronic_conditions}}</td>
+  </tr>
+   <tr>
+    <td class="allif-fix-table-col">Current Medication</td>
+    <td>{{allifquery.current_medication}}</td>
+  </tr>
 
-<div class="col-md-12"><!--start....header column-->
-
-<div class="container-fluid amel-content-header">
-<div class="dropdown allifmaal-content-dropdown">
-  <a class="dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
-  Actions
-  </a>
-  <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
-    <div class="content-dropdown-menu">
-      <li><a class="dropdown-item" href="{% url 'allifmaalcommonapp:commonAddTransactionDetails' allifquery.id user_var glblslug %}">Refresh</a></li>
-      <li><a class="dropdown-item" href="{% url 'allifmaalcommonapp:commonAddTransactionItems' allifquery.id user_var glblslug %}">Add Item</a></li>
-      <li><a class="dropdown-item" href="{% url 'allifmaalcommonapp:commonSpaceBookings' allifquery.id user_var glblslug %}">Space Allocation</a></li>
-      <li><a class="dropdown-item" href="{% url 'allifmaalcommonapp:commonAddSpaceBookingItems' allifquery.id user_var glblslug %}">Allocate Space</a></li>
-      <li><a class="dropdown-item" href="{% url 'allifmaalcommonapp:commonProgress' allifquery.id user_var glblslug %}">Progress Records</a></li>
-      <li><a class="dropdown-item" href="{% url 'allifmaalcommonapp:commonTransactionToPdf' allifquery.id user_var glblslug %}">Download</a></li>
-      <li><a class="dropdown-item body-delete-link" href="{% url 'allifmaalcommonapp:commonWantToDeleteTransaction' allifquery.id user_var glblslug %}">Delete Item</a></li>
-       
-   </div>
-  </ul>
-</div>
-<a href="{% url 'allifmaalcommonapp:commonHome' user_var glblslug %}">Home</a>
-<a href="{% url 'allifmaalcommonapp:commonTransactions' user_var glblslug %}">Transactions</a>
-<a href="{% url 'allifmaalshaafiapp:triageData' user_var glblslug %}">Triage Records</a>
-
-{% if 'commonAddTransactionDetails' in allif_contextual_action_links %}
-    <a href="{{ allif_contextual_action_links.commonAddTransactionDetails.url }}">Transaction Details</a>
-  {% else %}
-    <a href="">Transaction Details</a>
-{% endif %}
-
-
-
-{% if 'AddTriageData' in allif_contextual_action_links %}
-
-<a href="{% url 'allifmaalshaafiapp:triageData' user_var glblslug %}">Triage Records</a>
-  <a class="action-button" href="{{ allif_contextual_action_links.AddTriageData.url }}">Add Triage</a>
-  <a class="action-button" href="{{ allif_contextual_action_links.addDoctorAssessment.url }}"> Add Doctor Assessment</a>
-{% else %}
-{% endif %}
-
-
-{% if 'addExamDetails' in allif_contextual_action_links %} {# Example for a new action name #}
-
-  <a class="action-button" href="{{ allif_contextual_action_links.addExamDetails.url }}">New Examination</a>
+  <tr>
+    <td class="allif-fix-table-col">Pain Level</td>
+    <td>{{allifquery.pain_level}}</td>
+  </tr>
  
-{% else %}
-{% endif %}
+  {%endblock%}
 
-</div>
+  {% block core-details-tab-col-two %}
+ <tr>
+    <td class="allif-fix-table-col">Triage Disposition</td>
+    <td>{{allifquery.triage_disposition}}</td>
+  </tr>
 
-    </div><!--end....header column-->
-  
-  </div><!--end....header row-->
-
-</div><!--end....main headere-->
-
-  <div class="allifmaincontainer">
-<div class="row mt-12"> <!--start....table row-->
-  <div class="table-details-content-description">{{allifquery}} Details </div>
-  <div class="col-md-12"> <!--start....table column-->
-  <div class="allif-scroll-table">
-    <div class="allif-info-tables">
-      <div class="row"><!--start of row div --->
-  <!--start of column two-->
-  <div class="col-md-4">
-    
-      <!--start of the table here-->
-      <div class="table-responsive">
-      <table class="table table-layout">
-      <tbody>
-    
-        <tr>
-          <td class="allif-fix-table-col">Company</td>
-          <td>{{allifquery.company}}</td>
-          </tr>
-      <tr>
-        <td class="allif-fix-table-col">Division</td>
-        <td>{{allifquery.division}}</td>
-        </tr>
-      <tr>
-        <td class="allif-fix-table-col">Branch</td>
-        <td>{{allifquery.branch}}</td>
-        </tr>
-        <tr>
-          <td class="allif-fix-table-col">Department</td>
-          <td>{{allifquery.department}}</td>
-          </tr>
-            
-          <tr>
-            <td class="allif-fix-table-col">Number</td>
-            <td>{{allifquery.trans_number}}</td>
-            </tr>
-     
-    
-       <tr>
-        <td class="allif-fix-table-col">Systolic Pressure</td>
-        <td>{{allifquery.blood_pressure_systolic}}</td>
-    
-        </tr>
-        <tr>
-            <td class="allif-fix-table-col">Diastolic Pressure</td>
-            <td>{{allifquery.blood_pressure_diastolic}}</td>
-        
-            </tr>
-             <tr>
-            <td class="allif-fix-table-col">Temperature</td>
-            <td>{{allifquery.temperature}}</td>
-        
-            </tr>
-             <tr>
-            <td class="allif-fix-table-col">Weight</td>
-            <td>{{allifquery.weight}}</td>
-        
-            </tr>
-            
-            <tr>
-            <td class="allif-fix-table-col">Height</td>
-            <td>{{allifquery.height}}</td>
-        
-            </tr>
-          
-             <tr>
-            <td class="allif-fix-table-col">Complaints</td>
-            <td>{{allifquery.complaints}}</td>
-        
-            </tr>
-             <tr>
-            <td class="allif-fix-table-col">Medical History</td>
-            <td>{{allifquery.past_medical_history}}</td>
-        
-            </tr>
-             <tr>
-            <td class="allif-fix-table-col">Chronic Conditions</td>
-            <td>{{allifquery.known_chronic_conditions}}</td>
-        
-            </tr>
-
-        </tbody>
-        </table>
-      </div>
-        </div>
-           
-    
-     <!--start of column two-->
-     <div class="col-md-4">
-       <!--start of the table here-->
-       <div class="allif-details-card table-responsive">
-       <table class="table table-layout">
-        <tbody>
-           <tr>
-            <td class="allif-fix-table-col">Oxygen Saturation</td>
-            <td>{{allifquery.oxygen_saturation}}</td>
-        
-            </tr>
-            <tr>
-            <td class="allif-fix-table-col">Resipration Rate</td>
-            <td>{{allifquery.respiration_rate}}</td>
-        
-            </tr>
-             <tr>
-            <td class="allif-fix-table-col">Pulse Rate</td>
-            <td>{{allifquery.pulse_rate}}</td>
-        
-            </tr>
-          
-             <tr>
-            <td class="allif-fix-table-col">Allergies</td>
-            <td>{{allifquery.allergies}}</td>
-        
-            </tr>
-             <tr>
-            <td class="allif-fix-table-col">Current Medication</td>
-            <td>{{allifquery.current_medication}}</td>
-        
-            </tr>
-              <tr>
-            <td class="allif-fix-table-col">Comments</td>
-            <td>{{allifquery.description}}</td>
-        
-            </tr>
-             <tr>
-            <td class="allif-fix-table-col">Triage Date</td>
-            <td>{{allifquery.record_date}}</td>
-        
-            </tr>
-        
-          </tbody>
-          </table>
-          </div>
-          </div>
-    
-    
-     <!--start of column two-->
-     <div class="col-md-4">
-      <div class="allif-details-card table-responsive">
-       <!--start of the table here-->
-       <table class="table table-layout">
-        <tbody>
-         <tr>
-        <td class="allif-fix-table-col">Recorded By</td>
-        <td>{{allifquery.staff}}</td>
-  
-      </tr>
-          <tr>
-          <td class="allif-fix-table-col">Pain Level</td>
-          <td>{{allifquery.pain_level}}</td>
-        </tr>
-          
-          <tr>
-          <td class="allif-fix-table-col">Triage Level</td>
-          <td>{{allifquery.triage_level}}</td>
-        </tr>
-          <tr>
-          <td class="allif-fix-table-col">Arrival Mode</td>
-          <td>{{allifquery.mode_of_arrival}}</td>
-        </tr>
-          <tr>
-          <td class="allif-fix-table-col">Mobility</td>
-          <td>{{allifquery.mobility_status}}</td>
-        </tr>
-          <tr>
-          <td class="allif-fix-table-col">Mental Status</td>
-          <td>{{allifquery.mental_status}}</td>
-        </tr>
-          <tr>
-          <td class="allif-fix-table-col">Triage Disposition</td>
-          <td>{{allifquery.triage_disposition}}</td>
-        </tr>
-          <tr>
-          <td class="allif-fix-table-col">Disposition Notes</td>
-          <td>{{allifquery.disposition_notes}}</td>
-        </tr>
-        <tr>
-          <td class="allif-fix-table-col">Treatment Plan</td>
-          <td>{{allifquery.treatment_plan}}</td>
-        </tr>
-         
-          </tbody>
-          </table>
-          
-  </div>
-    </div>
-
-    </div><!--end of row div --->
-      
-        </div>
-
-</div><!--end....table row-->
-</div>
-<!--end of table-->
-
-</div><!--end of main container of the page....-->
-
-<hr>
-<div class="row mt-12"> <!--start....table row-->
-  <div class="table-details-content-description">Edit {{allifquery}} Warehouse Details</div>
-  <form method='POST' action=''>{% csrf_token %}
-  <div class="col-md-12"> <!--start....table column-->
-  <div class="allif-scroll-table">
-    <div class="allif-info-tables">
-      <div class="row"><!--start of row div --->
-  <!--start of column two-->
-  <div class="col-md-4">
-    
-      <!--start of the table here-->
-      <div class="table-responsive">
-      <table class="table table-layout">
-      <tbody>
-
-      <tr>
-        <td class="allif-fix-table-col">Division</td>
-        <td>{{form.division}}</td>
-    
-        </tr>
-        
-        <tr>
-          <td class="allif-fix-table-col">Branch</td>
-          <td>{{form.branch}}</td>
-      
-          </tr>
-            <tr>
-            <td class="allif-fix-table-col">Department</td>
-            <td>{{form.department}}</td>
-        
-            </tr>
-       <tr>
-        <td class="allif-fix-table-col">Systolic Pressure</td>
-        <td>{{form.blood_pressure_systolic}}</td>
-    
-        </tr>
-        <tr>
-            <td class="allif-fix-table-col">Diastolic Pressure</td>
-            <td>{{form.blood_pressure_diastolic}}</td>
-        
-            </tr>
-             <tr>
-            <td class="allif-fix-table-col">Temperature</td>
-            <td>{{form.temperature}}</td>
-        
-            </tr>
-             <tr>
-            <td class="allif-fix-table-col">Weight</td>
-            <td>{{form.weight}}</td>
-        
-            </tr>
-            
-            <tr>
-            <td class="allif-fix-table-col">Height</td>
-            <td>{{form.height}}</td>
-        
-            </tr>
-          
-             <tr>
-            <td class="allif-fix-table-col">Complaints</td>
-            <td>{{form.complaints}}</td>
-        
-            </tr>
-             <tr>
-            <td class="allif-fix-table-col">Medical History</td>
-            <td>{{form.past_medical_history}}</td>
-        
-            </tr>
-             <tr>
-            <td class="allif-fix-table-col">Chronic Conditions</td>
-            <td>{{form.known_chronic_conditions}}</td>
-        
-            </tr>
-
-        </tbody>
-        </table>
-      </div>
-        </div>
-           
-    
-     <!--start of column two-->
-     <div class="col-md-4">
-       <!--start of the table here-->
-       <div class="allif-details-card table-responsive">
-       <table class="table table-layout">
-        <tbody>
-         <tr>
-            <td class="allif-fix-table-col">Oxygen Saturation</td>
-            <td>{{form.oxygen_saturation}}</td>
-        
-            </tr>
-            <tr>
-            <td class="allif-fix-table-col">Resipration Rate</td>
-            <td>{{form.respiration_rate}}</td>
-        
-            </tr>
-             <tr>
-            <td class="allif-fix-table-col">Pulse Rate</td>
-            <td>{{form.pulse_rate}}</td>
-        
-            </tr>
-          
-             <tr>
-            <td class="allif-fix-table-col">Allergies</td>
-            <td>{{form.allergies}}</td>
-        
-            </tr>
-             <tr>
-            <td class="allif-fix-table-col">Current Medication</td>
-            <td>{{form.current_medication}}</td>
-        
-            </tr>
-              <tr>
-            <td class="allif-fix-table-col">Comments</td>
-            <td>{{form.description}}</td>
-        
-            </tr>
-             <tr>
-            <td class="allif-fix-table-col">Triage Date</td>
-            <td>{{form.record_date}}</td>
-        
-            </tr>
-        
-          </tbody>
-          </table>
-          </div>
-          </div>
-    
-    
-     <!--start of column two-->
-     <div class="col-md-4">
-      <div class="allif-details-card table-responsive">
-       <!--start of the table here-->
-       <table class="table table-layout">
-        <tbody>
-        <tr>
-        <td class="allif-fix-table-col">Recorded By</td>
-        <td>{{form.staff}}</td>
-  
-      </tr>
-          <tr>
-          <td class="allif-fix-table-col">Pain Level</td>
-          <td>{{form.pain_level}}</td>
-        </tr>
-          
-          <tr>
-          <td class="allif-fix-table-col">Triage Level</td>
-          <td>{{form.triage_level}}</td>
-        </tr>
-          <tr>
-          <td class="allif-fix-table-col">Arrival Mode</td>
-          <td>{{form.mode_of_arrival}}</td>
-        </tr>
-          <tr>
-          <td class="allif-fix-table-col">Mobility</td>
-          <td>{{form.mobility_status}}</td>
-        </tr>
-          <tr>
-          <td class="allif-fix-table-col">Mental Status</td>
-          <td>{{form.mental_status}}</td>
-        </tr>
-          <tr>
-          <td class="allif-fix-table-col">Triage Disposition</td>
-          <td>{{form.triage_disposition}}</td>
-        </tr>
-          <tr>
-          <td class="allif-fix-table-col">Disposition Notes</td>
-          <td>{{form.disposition_notes}}</td>
-        </tr>
-        <tr>
-          <td class="allif-fix-table-col">Treatment Plan</td>
-          <td>{{form.treatment_plan}}</td>
-        </tr>
-         
-        <tr>
-          <td class="allif-fix-table-col">Action</td>
-          <td> <input type="submit" value='Save' class="btn btn-success allifmaal-submit-btn"></td>
-      
-          </tr>
-          </tbody>
-          </table>
-  </div>
-    </div>
-    </div><!--end of row div --->
-      
-        </div>
-
-</div><!--end....table row-->
-</div>
-
-<div class="error-body">
-  <p>{{error_message}}</p>
-  </div>
-</form>
-<!--end of table-->
-
-</div><!--end of main container of the page....-->
-
-<hr>
-<br>
-</div>
-</div>
-  {% block scripts %}
+   <tr>
+    <td class="allif-fix-table-col">Allergies</td>
+    <td>{{allifquery.allergies}}</td>
+  </tr>
+   <tr>
+    <td class="allif-fix-table-col">Disposition Notes</td>
+    <td>{{allifquery.disposition_notes}}</td>
+  </tr>
+   <tr>
+    <td class="allif-fix-table-col">Triage Level</td>
+    <td>{{allifquery.triage_level}}</td>
+  </tr>
+  <tr>
+    <td class="allif-fix-table-col">Arrival Mode</td>
+    <td>{{allifquery.mode_of_arrival}}</td>
+  </tr>
+  <tr>
+    <td class="allif-fix-table-col">Mobility</td>
+    <td>{{allifquery.mobility_status}}</td>
+  </tr>
+  <tr>
+    <td class="allif-fix-table-col">Mental Status</td>
+    <td>{{allifquery.mental_status}}</td>
+  </tr>
 
   {% endblock %}
-   {% endblock %}
+
+  {% block allif_sensitive_section_col_one %}
+    <tr>
+      <td class="allif-fix-table-col">{{allifquery}}</td>
+      <td><a class="amel-table-list-identifier" href="{% allif_get_single_nav_link_url 'triagedata' user_var glblslug %}">Go Back</a></td>
+    </tr>
+ 
+  {%endblock%}
+
+  {% block general-details-tab-col-two %}
+  <tr>
+    <td class="allif-fix-table-col">Description</td>
+    <td>{{allifquery.description}}</td>
+  </tr>
+  {% endblock %}
+  
+  {% block allif_sensitive_section_col_two %}
+  <tr>
+    <td class="allif-fix-table-col">Delet {{allifquery}}</td>
+    <td><a class="amel-table-list-identifier body-delete-link" href="{{ allif_contextual_action_links.DeleteTriageConfirm.url }}">Delete {{allifquery}}</a></td>
+  </tr>
+  {%endblock%}
+
+  {% block item_details_related_items_full_table %} {%endblock%}
+  {% block item_details_related_items_full_half_tables %}{%endblock%}
+
   
