--- a/allifmaalcommonapp/templates/allifmaalcommonapp/companies/company-details-clients.html
+++ b/allifmaalcommonapp/templates/allifmaalcommonapp/companies/company-details-clients.html
@@ -23,7 +23,7 @@
   </a>
   <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
     <div class="content-dropdown-menu">
-    <li><a class="dropdown-item" href="{% url 'allifmaalcommonapp:commonEditEntityByClients' allifquery.companyslug user_var glblslug %}">Edit Company</a></li>
+    <li><a class="dropdown-item" href="{% url 'allifmaalcommonapp:commonEditEntityByClients' allifquery.slgfld user_var glblslug %}">Edit Company</a></li>
     <li><a class="dropdown-item body-delete-link" href="{% url 'allifmaalcommonapp:commonWantToDeleteCompany' allifquery.id user_var glblslug %}">Delete Company</a></li>
 
    </div>
