--- a/allifmaalcommonapp/templates/allifmaalcommonapp/companies/company-details.html
+++ b/allifmaalcommonapp/templates/allifmaalcommonapp/companies/company-details.html
@@ -42,7 +42,7 @@ Actions
   <div class="content-dropdown-menu">
   
 <li>
-  <a class="dropdown-item" href="{% url 'allifmaalcommonapp:commonEditEntityByAllifAdmin' allifquery.companyslug user_var glblslug %}">Edit Company</a></li>
+  <a class="dropdown-item" href="{% url 'allifmaalcommonapp:commonEditEntityByAllifAdmin' allifquery.slgfld user_var glblslug %}">Edit Company</a></li>
  
 <li><a class="dropdown-item" href="{% url 'allifmaalcommonapp:commonWantToDeleteCompany' allifquery.id user_var glblslug %}">Delete Company</a></li>
 
