--- a/allifmaalcommonapp/templates/allifmaalcommonapp/companies/comp-delete-confirm.html
+++ b/allifmaalcommonapp/templates/allifmaalcommonapp/companies/comp-delete-confirm.html
@@ -172,7 +172,7 @@
           <tr>
             <td>
             <div class="delete-options-container">
-              <a href="{% url 'allifmaalcommonapp:commonDeleteEntity' allifquery.companyslug %}" class="body-delete-link">Yes</a></li>
+              <a href="{% url 'allifmaalcommonapp:commonDeleteEntity' allifquery.slgfld %}" class="body-delete-link">Yes</a></li>
             </div>
             </td>
           </tr>
