added middle ware for company querying...

--- a/allifmaaladminapp/templates/allifmaaladminapp/home/home.html
+++ b/allifmaaladminapp/templates/allifmaaladminapp/home/home.html
@@ -91,6 +91,7 @@
         <li><a class="dropdown-item"href="{% url 'allifmaaladminapp:product_list' %}">Products</a></li>
      
         <li><a class="dropdown-item" href="{% url 'allifmaaladminapp:adminCustomerContacts' user_var glblslug %}">Contacts</a></li>
+        <li><a class="dropdown-item" href="{% url 'allifmaalcommonapp:commonDebugging' %}">Debugging</a></li>
     
     </div>
     </ul>
