--- a/allifmaalcommonapp/templates/allifmaalcommonapp/hrm/users/adduser.html
+++ b/allifmaalcommonapp/templates/allifmaalcommonapp/hrm/users/adduser.html
@@ -51,13 +51,13 @@
           <tbody>
 
         <tr>
-          <td class="allif-fix-table-col">Company</td>
+          <td class="allif-fix-table-col">User Company Slug</td>
           <td>{{form.usercompany}}</td>
         
           </tr>
           <tr>
-            <td class="allif-fix-table-col">Division</td>
-            <td>{{form.userdivision}}</td>
+            <td class="allif-fix-table-col">Company</td>
+            <td>{{form.company}}</td>
         
             </tr>
             <tr>
