--- a/allifmaalcommonapp/templates/allifmaalcommonapp/branches/branches.html
+++ b/allifmaalcommonapp/templates/allifmaalcommonapp/branches/branches.html
@@ -21,7 +21,7 @@
         <div class="content-dropdown-menu">
   
         <li><a class="dropdown-item">Looking for something?</a></li>
-        <form method='POST' action="{% url 'allifmaalcommonapp:commonBranchSearch' user_var glblslug %}">{% csrf_token %}
+        <form method='POST' action="">{% csrf_token %}
         
           <input type="text" id="allifsearchcommonfield" name="allifsearchcommonfieldname" class="form-control allifsearchcommonfieldclasstwo"
           placeholder="Type Here ...">
