improved data isolation

--- a/allifmaalcommonapp/templates/allifmaalcommonapp/companies/newentity.html
+++ b/allifmaalcommonapp/templates/allifmaalcommonapp/companies/newentity.html
@@ -19,10 +19,9 @@
 
   <div class="form-header">
     <h5>
-    Dear <strong>{{user_var}}</strong>, Please Register Your Entity/Company Here.
+    Dear <strong>{{user_var}}</strong>, Please Register Your Organization Here. <a class="logoutlink" href="{% url 'allifmaalcommonapp:commonWebsite' %}">Website</a>
 </h5>
   </div>
-
 </div>
     
   <div class="row mt-12"> <!--start....table row-->
@@ -95,7 +94,6 @@
 <script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js"></script>
 
 <script src="{% static 'allifapperp/js/common/common.js' %}">
-  
 </script>
 </body>
 </html>
