--- a/allifmaalcommonapp/templates/allifmaalcommonapp/hrm/users/adduser.html
+++ b/allifmaalcommonapp/templates/allifmaalcommonapp/hrm/users/adduser.html
@@ -56,13 +56,18 @@
         
           </tr>
           <tr>
+          <td class="allif-fix-table-col">Division</td>
+          <td>{{form.division}}</td>
+        
+          </tr>
+          <tr>
             <td class="allif-fix-table-col">Company</td>
             <td>{{form.company}}</td>
         
             </tr>
             <tr>
               <td class="allif-fix-table-col">Branch</td>
-              <td>{{form.userbranch}}</td>
+              <td>{{form.branch}}</td>
           
               </tr>
            
@@ -80,7 +85,7 @@
             <tbody>
               <tr>
                 <td class="allif-fix-table-col">Department</td>
-                <td>{{form.userdepartment}}</td>
+                <td>{{form.department}}</td>
             
                 </tr>
                 <tr>
