--- a/allifmaalcommonapp/templates/allifmaalcommonapp/companies/comp-delete-confirm.html
+++ b/allifmaalcommonapp/templates/allifmaalcommonapp/companies/comp-delete-confirm.html
@@ -1,200 +1,11 @@
-{% extends 'allifmaalcommonapp/base/uimainbase/allifmaaluibase.html'%}
-{% load humanize %}
-{% block title %}
-{{title}}
-{% endblock %}
-{% block style %}
-{%endblock%}
-{% block body %}
-<div class="allifmaal-main-container">
+{% extends 'allifmaalcommonapp/ui/general/delete-confirm.html'%}
+{% load allif_navigation_tags %}
  
-<!--start....main headere-->
-<div class="card-header">
+{% block delete-action-decline %}
+<a class="amel-table-list-identifier" href="{% url 'allifmaalcommonapp:commonHome' user_var glblslug %}">No, Dont Delete {{allifquery}}</a>
 
-<div class="row mt-12" ><!--start....header row-->
+{% endblock %}
 
-<div class="col-md-12"><!--start....header column-->
-
-<div class="container-fluid amel-content-header">
-
-<a href="{% url 'allifmaalcommonapp:commonHome' user_var glblslug %}">Home</a>
-
-</div>
-
-    </div><!--end....header column-->
-  
-  </div><!--end....header row-->
-
-</div><!--end....main headere-->
-
-
-<div class="allifmaincontainer">
-
-<div class="row mt-12"> <!--start....table row-->
-  <div class="delete-confirmation-header">Do you want to delete {{allifquery}}?</div>
-  <div class="col-md-12"> <!--start....table column-->
-  <div class="allif-scroll-table">
-    <div class="allif-info-tables">
-      <div class="row"><!--start of row div --->
-  <!--start of column two-->
-  <div class="col-md-4">
-    
-      <!--start of the table here-->
-      <div class="table-responsive">
-      <table class="table table-layout">
-      <tbody>
-      <tr>
-        <td class="allif-fix-table-col">Company</td>
-        <td>{{allifquery.company}}</td>
-    
-        </tr>
-        <tr>
-          <td class="allif-fix-table-col">Email</td>
-          <td>{{allifquery.email}}</td>
-      
-          </tr>
-        
-        </tbody>
-        </table>
-      </div>
-        </div>
-           
-    
-     <!--start of column two-->
-     <div class="col-md-4">
-       <!--start of the table here-->
-       <div class="allif-details-card table-responsive">
-       <table class="table table-layout">
-        <tbody>
-          <tr>
-            <td class="allif-fix-table-col">Phone</td>
-            <td>{{allifquery.phone1}}</td>
-        
-            </tr>
-            <tr>
-              <td class="allif-fix-table-col">City</td>
-              <td>{{allifquery.city}}</td>
-          
-              </tr>
-        
-          </tbody>
-          </table>
-          </div>
-          </div>
-    
-
-     <!--start of column two-->
-     <div class="col-md-4">
-      <div class="allif-details-card table-responsive">
-       <!--start of the table here-->
-       <table class="table table-layout">
-        <tbody>
-          <tr>
-            <td class="allif-fix-table-col">Country</td>
-            <td>{{allifquery.country}}</td>
-        
-            </tr>
-            
-      <tr>
-        <td class="allif-fix-table-col">Owner</td>
-        <td>{{allifquery.owner}}</td>
-    
-        </tr>
-  
-          </tbody>
-          </table>
-  </div>
-    </div>
-    </div><!--end of row div --->
-      
-        </div>
-
-</div><!--end....table row-->
-</div>
-<!--end of table-->
-
-</div><!--end of main container of the page....-->
-
-<div class="row mt-12"> <!--start....table row-->
-  
-  <div class="col-md-12"> <!--start....table column-->
-  <div class="allif-scroll-table">
-    <div class="allif-info-tables">
-      <div class="row"><!--start of row div --->
-  <!--start of column two-->
-  <div class="col-md-4">
-    
-      <!--start of the table here-->
-      <div class="table-responsive">
-      <table class="table table-layout">
-      <tbody>
-    <tr>
-        <td>
-        <div class="delete-options-container">
-          <a href="{% url 'allifmaalcommonapp:commonHome' user_var glblslug %}">Back</a>
-        </div>
-        </td>
-      </tr>
-       
-        </tbody>
-        </table>
-      </div>
-        </div>
-           
-    
-     <!--start of column two-->
-     <div class="col-md-4">
-       <!--start of the table here-->
-       <div class="allif-details-card table-responsive">
-       <table class="table table-layout">
-        <tbody>
-          <tr>
-            <td>
-            <div class="delete-options-container">
-              <a href="{% url 'allifmaalcommonapp:commonHome' user_var glblslug %}">No</a>
-            </div>
-            </td>
-          </tr>
-           
-         
-          </tbody>
-          </table>
-          </div>
-          </div>
-    
-    
-     <!--start of column two-->
-     <div class="col-md-4">
-      <div class="allif-details-card table-responsive">
-       <!--start of the table here-->
-       <table class="table table-layout">
-        <tbody>
-          <tr>
-            <td>
-            <div class="delete-options-container">
-              <a href="{% url 'allifmaalcommonapp:commonDeleteEntity' allifquery.id user_var glblslug %}" class="body-delete-link">Yes</a></li>
-            </div>
-            </td>
-          </tr>
-          </tbody>
-          </table>
-  </div>
-    </div>
-    </div><!--end of row div --->
-      
-        </div>
-
-</div><!--end....table row-->
-</div>
-<!--end of table-->
-
-</div><!--end of main container of the page....-->
-
-</div>
-</div>
-
-  {% block scripts %}
-
-  {% endblock %}
-   {% endblock %}
-   
+{% block delete-action-confirm %}
+<a class="amel-table-list-identifier body-delete-link" href="{% url 'allifmaalcommonapp:commonDeleteEntity' allifquery.id user_var glblslug %}"> Yes, Delete {{allifquery}}</a>
+{% endblock %}
