--- a/allifmaalcommonapp/templates/allifmaalcommonapp/companies/companies.html
+++ b/allifmaalcommonapp/templates/allifmaalcommonapp/companies/companies.html
@@ -1,258 +1,38 @@
-{% extends 'allifmaalcommonapp/base/uimainbase/allifmaaluibase.html'%}
+{% extends 'allifmaalcommonapp/ui/tables/full/data-list.html'%}
+{% load allif_navigation_tags %}
 {% load humanize %}
-{% block title %}
-{{title}}
+{% block allif_header_forms_dropdown%} {%endblock%}
+{% block allif-header-links %}
+<a href="{% allif_get_single_nav_link_url 'Companies' user_var glblslug %}">Companies</a>
+<a href="{% allif_get_single_nav_link_url 'AddCompany' user_var glblslug %}">Add Company</a>
+  
 {% endblock %}
-{% block style %}
-{%endblock%}
-{% block body %}
-<div class="allifmaal-main-container">
+
+{% block list-table-headers %}
+<td class="allif-fix-table-col"> Company </td>
+<td class="allif-table-header-td"> Sector</td>
+<td class="allif-table-header-td"> Owner </td>
+<td class="allif-table-header-td"> Email</td>
+<td class="allif-table-header-td">Status </td>
+{% endblock %}
+{% block list-table-content-seciton %}
+<td class="allif-fix-table-col">
+   <a class="allif-table-links" href="{% url 'allifmaalcommonapp:commonCompanyDetailsForAllifAdmin' item.id user_var glblslug %}"> {{item.company}} </a>
+</td>
+<td class="allif-table-content-td"> {{item.sector}} </td>
+<td class="allif-table-content-td"> {{item.owner}}</td>
+<td class="allif-table-content-td"> {{item.owner.email}}</td>
+<td class="allif-table-content-td">{{item.status}}</td>
+{% endblock %}
+
+{% block list-table-content-seciton-dropdown-links %}
+<a href="{% url 'allifmaalcommonapp:commonEditEntityByAllifAdmin' item.id user_var glblslug %}" class="dropdown-item" id="allif-table-drop-item-link">Edit Bank</a>
+<a href="{% url 'allifmaaladminapp:adminBlockUnblockEntity' item.id user_var glblslug %}" class="dropdown-item" id="allif-table-drop-item-link">
+   {% if item.status == 'Blocked' %} Unblock {% else %} Block {% endif %}
+</a>
+
+{% endblock %}
  
-  <!--start....main headere-->
-<div class="card-header">
-  <div class="row mt-12" ><!--start....header row-->
-  <div class="col-md-12"><!--start....header column-->
-  <div class="container-fluid amel-content-header">
-    <div class="dropdown allifmaal-content-dropdown">
-      <a class="dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
-      Search Filters
-      </a>
-      <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
-        <div class="content-dropdown-menu">
-  
-        <li><a class="dropdown-item">Looking for something?</a></li>
-        <li><a class="dropdown-item" href="{% url 'allifmaalcommonapp:commonCompanies' user_var glblslug %}">Clear Search</a></li>
-       
-        <form method='POST' action="{% url 'allifmaalcommonapp:commonCompanySearch' user_var glblslug %}">{% csrf_token %}
-        
-          <input type="text" id="allifsearchcommonfield" name="allifsearchcommonfieldname" class="form-control allifsearchcommonfieldclasstwo"
-          placeholder="Type Here ...">
-        
-          <button type="submit" class="btn allifmaal-submit-btn">Submit</button>
-          </form>
-          <hr>
-          <li><a class="dropdown-item">Select Ordering Option</a></li>
-        <form method='POST' action="{% url 'allifmaalcommonapp:commonCompanies' user_var glblslug %}" enctype="multipart/form-data">{% csrf_token %}
-      
-        <div>
-        <select name="requiredformat" class="form-control">
-          {% for item in datasorts %}
-          <option>{{item.name}}</option>
-            
-           {% endfor %}
-           
-          </select>
-          </div>
-          <button type="submit" class="btn allifmaal-submit-btn">Submit</button>
-      
-      </form>
-      <hr>
-      <li><a class="dropdown-item">Advanced Searching</a></li>
-      <form method='POST' action="{% url 'allifmaalcommonapp:commonCompanyAdvanceSearch' user_var glblslug %}" enctype="multipart/form-data">{% csrf_token %}
-        
-        <div>
-          <label>Start Date</label>
-          <input type="date" class="form-control" name="strtdate" placeholder="Starting Date y-m-d">
-        </div>
-        <div >
-          <label >End Date</label>
-          <input type="date" class="form-control" name="enddate" placeholder="Ending Date y-m-d">
-        </div>
-        
-        <div >
-          <label >Select Option</label>
-          <select name="requiredformat" class="form-control">
-            {% for item in formats %}
-            <option>{{item.name}}</option>
-            
-         {% endfor %}
-         
-        </select>
-        </div>
-  
-        
-        <button type="submit" class="btn allifmaal-submit-btn">Submit</button>
-    
-    </form>
-    <hr>
-      </div>
-      </ul>
-    </div>
-    <a class="amel-table-list-identifier">Companies:</a>
-
-    <a href="{% url 'allifmaalcommonapp:commonHome' user_var glblslug %}">Home</a>
-   
-  <a href="{% url 'allifmaalcommonapp:commonSuppliers' user_var glblslug %}" >Suppliers</a>
-  
-  </div>
-    </div><!--end....header column-->
-    </div><!--end....header row-->
-  </div><!--end....main headere-->
-  
-    <div class="allifmaincontainer">
-  
-  {% if clicked_row_data %}
-  
-<div class="row mt-12"> <!--start....table row-->
-  <div class="col-md-12"> <!--start....table column-->
-  <div class="allif-scroll-table">
-    <div class="table-responsive allif-full-table">
-    <table class="table table-layout">
-      <thead>
-        <tr class="allif-table-header-row">
-        <td>Company</td>
-        <td>Phone</td>
-        <td>Address</td>
-        </tr>
-        </thead>
-        <tbody class="allif-table-body">
-        
-        <tr>
-        <td>
-          
-          <a class="allif-table-links" href="{% url 'allifmaalcommonapp:commonCompanyDetailsForAllifAdmin' clicked_row_data.id user_var glblslug %}">
-          {{clicked_row_data.company}}
-          </a>
-        </td>
-        <td>{{clicked_row_data.phone1}}</td>
-        <td>{{clicked_row_data.address}}</td>
-      </tr>
-     
-      </tbody>
-    </table>
-    </div>
-   </div>
-
-</div><!--end....table column-->
-
-</div><!--end....table row-->
-  {% endif %}
-<div class="row mt-12"> <!--start....table row-->
-  <div class="col-md-12"> <!--start....table column-->
-  <div class="allif-scroll-table">
-    <div class="table-responsive allif-full-table">
-    <table class="table table-layout">
-      <thead>
-        <tr class="allif-table-header-row">
-        <td class="allif-fix-table-col">Company Name</td>
-        <td>Compnay Sector</td>
-        <td>Company Owner</td>
-        <td>Company Email Address</td>
-        <td>Status</td>
-       
-        <td>Navigate</td>
-        
-        <td> . . . </td>
-        <td></td>
-        </tr>
-        </thead>
-        <tbody class="allif-table-body">
-         
-        
-        {% for item in allifqueryset %} 
-        <tr data-id="{{item.id}}">
-        <td class="allif-fix-table-col"><a class="allif-table-links" href="{% url 'allifmaalcommonapp:commonShowClickedRowCompanyDetails' item.id user_var glblslug %}">{{item.company}}</a></td>
-       
-        <td>
-          {{item.sector}}
-        </td>
-        <td>{{item.owner}}</td>
-        
-        <td>{{item.owner.email}}</td>
-        <td>{{item.status}}</td>
-     
-        </td>
-        <td>
-          <div class="dropdown allifmaal-content-dropdown">
-            <a href="#" onclick="showDropdown(event, this)" class="dropdown-toggle dropdown-item" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">Actions</a>
-            <div class="dropdown-content">
-              <a href="{% url 'allifmaalcommonapp:commonCompanyDetailsForAllifAdmin' item.id user_var glblslug %}" class="dropdown-item" id="allif-table-drop-item-link">More Details</a>
-              <a href="{% url 'allifmaalcommonapp:commonEditEntityByAllifAdmin' item.id user_var glblslug %}" class="dropdown-item" id="allif-table-drop-item-link">Edit By Admin</a>
-
-              
-              <a href="{% url 'allifmaaladminapp:adminBlockUnblockEntity' item.id user_var glblslug %}" class="dropdown-item" id="allif-table-drop-item-link-delete">
-                {% if item.status == 'Blocked' %}
-                Unblock
-                {% else %}
-                Block
-                {% endif %}
-              </a>
-            </div>
-          </div>
-          <div class="dropdown allif-confirm-action">
-            
-            <a href="" id="allif-confirm-delete">No</a><span><strong> | </strong></span>
-            <a href="" id="allif-confirm-delete">Confirm</a>
-          </div>
-
-         
-        </td>
-
-       <td> . . . </td>
-       <td></td>
-      
-  
-    </tr>
-    {% endfor %}
-    {% if searched_data %}
-    {% for item in searched_data %}
-    <tr data-id="{{item.id}}">
-      <td class="allif-fix-table-col"><a class="allif-table-links" href="{% url 'allifmaalcommonapp:commonShowClickedRowCompanyDetails' item.id user_var glblslug %}">{{item.company}}</a></td>
-     
-      <td>
-        {{item.sector}}
-      </td>
-      <td>{{item.owner}}</td>
-      
-      <td>{{item.email}}</td>
-   
-      </td>
-      <td>
-        <div class="dropdown allifmaal-content-dropdown">
-          <a href="#" onclick="showDropdown(event, this)" class="dropdown-toggle dropdown-item" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">Actions</a>
-          <div class="dropdown-content">
-            <a href="{% url 'allifmaalcommonapp:commonCompanyDetailsForAllifAdmin' item.id user_var glblslug %}" class="dropdown-item" id="allif-table-drop-item-link">More Details</a>
-            <a href="" class="dropdown-item" id="allif-table-drop-item-link-delete">Block</a>
-            
-          </div>
-        </div>
-        <div class="dropdown allif-confirm-action">
-          
-          <a href="" id="allif-confirm-delete">No</a><span><strong> | </strong></span>
-          <a href="" id="allif-confirm-delete">Confirm</a>
-        </div>
-
-       
-      </td>
-
-     <td> . . . </td>
-     <td></td>
-    
-
-  </tr>
-    {% endfor %}
-      {%endif %}
-
-      </tbody>
-    </table>
-    </div>
-   </div>
-
-</div><!--end....table column-->
-
-</div><!--end....table row-->
-
-
-</div>
-</div>
-
-  {% block scripts %}
- 
-  {% endblock %}
-  {% endblock %}
-
-
-
 
 
 
