--- a/allifmaalusersapp/templates/allifmaalusersapp/base/userbase.html
+++ b/allifmaalusersapp/templates/allifmaalusersapp/base/userbase.html
@@ -13,12 +13,46 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 		<link href="{% static 'allifapperp/allifmaalusersapp/css/users/userstyles.css' %}" rel="stylesheet">
+    
+        
+         <!--below is for the dropdown of the select2 lib-->
+    <link href="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/css/select2.min.css" rel="stylesheet"/>
+
+    
     </head>
     <body>
 		       
         {% block body %}
 
         {% endblock %}
+
+    <!-- Select2 JS (if used globally) -->
+    <script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js"></script>
+    <!-- Bootstrap JS Bundle -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" xintegrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+
+    
+        <script>
+            
+/*....this function is used for the select2 library....*/
+    $(function () {
+        $('.custom-field-class-for-seclect2').select2({
+            placeholder: "Select The Correct Value Here",
+            theme: "classic",
+             width: '100%', // <--- CHANGE THIS TO '100%'
+            //width: 'resolve', // 'resolve' is often better for responsive design
+            closeOnSelect: true,
+            disabled: false,
+            dropdownCssClass: "form-control", // Use dropdownCssClass instead of customClass
+
+
+
+           
+        
+        });
+    });
+
+        </script>
      
     </body>
 <html>
